<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.AddEditContactActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:layout_marginTop="8dp"
        android:autofillHints="phone" />

    <EditText
        android:id="@+id/editTextCpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cpf_hint"
        android:inputType="number"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:layout_marginTop="24dp"/>

</LinearLayout>